--- a/src/style/header.css
+++ b/src/style/header.css
@@ -1,17 +1,87 @@
+nav{
+    position: sticky;
+    top: 0;    
+    background-color: white;
+    z-index: 10;
+    padding: 20px 0 ;
+    box-shadow: rgba(0, 0, 0, 0.03) 0px 4px 6px -1px, rgba(0, 0, 0, 0.03) 0px 2px 4px -1px;
+}
 .theHeader{
-    width: 100%;
+    max-width: 1440px;
     display: grid;
-    grid-template-columns: 40% 20% 40%;
+    grid-template-columns: 42.5% 15% 42.5%;
     justify-content: space-between;
-    padding: 0 5%;    
-    margin: 35px 0;
+    align-items: center;
+    margin: auto;
+    padding: 0 2%;
 }
 .navItems{
     justify-self: start;
 }
+.navItems a{
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 0 20px;
+    vertical-align: sub;
+    color: black;
+    transition: all .5s ease;
+}
+.navItems a:hover{
+    color: red;
+}
 .navLogo{
     justify-self: center;
+    text-transform: uppercase;
+    text-align: center;
+}
+.navLogo a{
+    color: black;
+}
+.navLogo h1{
+    font-size: 28px;
+}
+.navLogo p{
+    font-size: 12px;
+    font-weight: 500;
 }
 .navButtons{
     justify-self: end;
+    display: flex;
+    align-items: center;
+}
+.navButtons .searchBar{
+    margin: 0 20px;
+    background-color: #edede9;
+    /* border: 1px solid; */
+    border-radius: 40px;
+}
+.navButtons .searchBar button{
+    margin: 0 18px;
+    font-size: 18px;
+    border: none;
+    background-color: transparent;
+    vertical-align: middle;
+    cursor: pointer;
+}
+.navButtons .searchBar input{
+    border: none;
+    background-color: transparent;
+    outline: none;
+    line-height: 38px;
+    padding-right: 20px;
+    font-weight: 500;
+    font-size: 16px;
+}
+
+.navButtons .login{
+    padding: 0 20px;
+    vertical-align: middle;
+}
+.navButtons .login a{
+    color: black;
+    text-transform: uppercase;
+    vertical-align: sub;
+    background-color: #d6ccc2;
+    padding: 10px 16px;
+    border-radius: 25px;
 }
