--- a/src/style/Shop.css
+++ b/src/style/Shop.css
@@ -113,29 +113,6 @@ p {
   width: 100%;
 }
 
-/* .title {
-  text-align: center;
-  margin: 0 auto 80px;
-  position: relative;
-  line-height: 60px;
-  color: #555;
-}
-.title::after {
-  content: "";
-  background: #ff523b;
-  width: 80px;
-  height: 5px;
-  border-radius: 5px;
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translate(-50%);
-} */
-
-/* h4 {
-  color: #555;
-  font-weight: bolder;
-} */
 
 .col-md-4 p {
   font-size: 14px;
@@ -157,67 +134,6 @@ p {
 
 small {
   color: #555;
-}
-
-/* testimonial */
-
-.testimonial {
-  padding-top: 100px;
-}
-
-.testimonial .col-3 {
-  text-align: center;
-  padding: 40px 20px;
-  box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.1);
-  cursor: pointer;
-  transition: transform 0.5s;
-}
-
-.testimonial .col-3 img {
-  width: 100px;
-  margin-top: 20px;
-  border-radius: 50%;
-}
-
-.testimonial .col-3:hover {
-  transform: translateY(-10px);
-}
-
-.fa-quote-left {
-  font-size: 34px;
-  color: #ff523b;
-}
-
-.col-3 p {
-  font-size: 14px;
-  margin: 12px 0;
-  color: #777777;
-}
-
-.testimonial .col-3 h3 {
-  font-weight: 600;
-  color: #555;
-  font-size: 16px;
-}
-
-.brands {
-  margin: 100px auto;
-}
-
-.col-5 {
-  width: 160px;
-}
-
-.col-5 img {
-  width: 100%;
-  cursor: pointer;
-  filter: grayscale(100%);
-}
-
-.col-5 img:hover {
-  width: 100%;
-  cursor: pointer;
-  filter: grayscale(0);
 }
 
 /* all products page */
@@ -318,7 +234,7 @@ select:focus {
   padding: 5px;
 }
 
-.mySwiper {
+.round{
   width: 100%;
   text-align: center;
 }
