--- a/src/style/Primary.scss
+++ b/src/style/Primary.scss
@@ -54,6 +54,29 @@ a {
 	margin: auto auto;
 	padding: 0 15px;
 }
+
+//swiper js custom style
+.swiper-button-prev{
+	color: black;
+    border-radius: 50%;
+    padding: 25px;
+    background: $color_3;
+
+	&::after{
+		font-size: 24px;
+	}
+}
+.swiper-button-next{
+	color: black;
+    border-radius: 50%;
+    padding: 25px;
+    background: $color_3;
+
+	&::after{
+		font-size: 24px;
+	}
+}
+
 .card {
 	width: 100%;
 	height: auto;
@@ -222,6 +245,7 @@ a {
 	}
 }
 
+
 .enquire-box {
 	margin-bottom: 130px;
 	background-color: $background-color_4;
@@ -242,6 +266,7 @@ a {
 	}
 }
 
+//this style used in different pages
 .theForm {
 	overflow: hidden;
 	padding: 40px 25px;
@@ -250,7 +275,7 @@ a {
 		input {
 			width: 80%;
 			padding: 10px 18px;
-			font-size: 18px;
+			font-size: 16px;
 			color: $color_1;
 			margin-bottom: 30px;
 			border: none;
@@ -309,24 +334,20 @@ a {
 				border-color: $border-color_1;
 			}
 		}
+		select{
+			border: none;
+			padding: 8px 18px;
+			background-color: inherit;
+			border-bottom: 1px solid #8F9992;	
+		}
+	}
+
+	.input-box-divide{
+		display: grid;
+		grid-template-columns: 50% 50%;
 	}
 }
 
-.form-btn {
-	text-decoration: none;
-	background-color: $background-color_6;
-	font-size: 12px;
-	color: $color_2;
-	padding: 8px 16px;
-	border: none;
-	cursor: pointer;
-	transition: all .4s ease;
-	margin-top: 25px;
-	&:hover {
-		background-color: $background-color_7;
-		color: $color_1;
-	}
-}
 .validate-message {
 	float: right;
 	margin-top: 25px;
