--- a/src/style/Primary.scss
+++ b/src/style/Primary.scss
@@ -33,6 +33,9 @@ $border-color_1: black;
 	margin: auto auto;
 	padding: 0 15px;
 }
+.hidden{
+	display: none !important;
+}
 .title {
 	font-size: 30px;
 	font-weight: 700;
