--- a/src/style/Primary.scss
+++ b/src/style/Primary.scss
@@ -24,7 +24,7 @@ $border-color_1: black;
 	scroll-behavior: smooth;
 }
 *::selection {
-	color: $color_1;
+	color: white;
 	background: $color_3;
 }
 .centerContainer {
