--- a/src/style/UserProfile.scss
+++ b/src/style/UserProfile.scss
@@ -1,10 +1,10 @@
 .userProfile{
     max-width: 1200px;
     width: 100%;
-    padding: 75px 25px 0;
+    padding: 65px 25px 0;
 
     display: grid;
-    grid-template-columns: 72% 20%;
+    grid-template-columns: 60% 40%;
     gap: 2%;
 
     margin: auto;
@@ -13,7 +13,8 @@
 
     .userDetails{
         .greetings{
-            font-size: 65px;
+            font-size: 60px;
+            margin-bottom: 12px;
         }
 
         .message{
@@ -23,9 +24,22 @@
                 width: 70%;
             }
         }
+
+
+    }
+
+    .userCreds{
+        margin: 20px 25px;
+        
+        .credsGrid{
+            display: grid;
+            grid-template-columns: 40% 60%;
+            margin: 12px 0;
+        }
     }
 
     .userChatSection{
+        display: none;
         height: 100%;
         /*--------------------
         Mixins
