--- a/src/style/Footer.scss
+++ b/src/style/Footer.scss
@@ -1,6 +1,8 @@
-$color_1: #8F9992;
+// $color_1: #8F9992;
+$color_1: black;
 $color_2: #44332B;
-$background-color_1: #FAF8E3;
+$color_2: #44332B;
+$background-color_1: #FFDE2E;
 
 footer {
 	background-color: $background-color_1;
