--- a/src/style/Home.scss
+++ b/src/style/Home.scss
@@ -25,11 +25,11 @@ $background-color_3: #F7E8CD;
 }
 
 //mixing
-@mixin primaryButton($width:auto){
+@mixin primaryButton($width:auto, $bg-color:#FCD107, $color:white){
 	text-decoration: none;
-	background-color: $background-color_1;
+	background-color: $bg-color;
 	font-size: 12px;
-	color: $color_1;
+	color: $color;
 	padding: 8px 16px;
 	border: none;
 	cursor: pointer;
@@ -37,8 +37,8 @@ $background-color_3: #F7E8CD;
 	text-align: center;
 	width: $width;
 	&:hover {
-		background-color: #FCD107;
-		color: black;
+		// background-color: #FCD107;
+		// color: black;
 		border-radius: 25px;
 	}
 }
@@ -55,7 +55,7 @@ $background-color_3: #F7E8CD;
 	display: grid;
 	grid-template-columns: 50% 50%;
 	height: auto;
-	margin-bottom: 40px;
+	// margin-bottom: 40px;
 	.banner {
 		width: 100%;
 		position: relative;
@@ -99,14 +99,20 @@ $background-color_3: #F7E8CD;
 }
 
 // home page login register section
-.home-login-register {
+.home-login{
+	background-color: #ffde2e;
+}
+.home-login-register {	
+	max-width: 1200px;
+	width: 100%;
+	margin: auto auto;
 	display: flex;
 	align-items: center;
 	gap: 70px;
 	padding: 40px 0 50px 0;
 	margin-bottom: 40px;
 	.primary-btn{
-		@include primaryButton(200px);
+		@include primaryButton(200px, #17344a, white);
 	}
 }
 
@@ -232,7 +238,7 @@ $background-color_3: #F7E8CD;
 	display: grid;
 	grid-template-columns: 50% 50%;
 	overflow: hidden;
-	background-color: $background-color_3;
+	background-color: 	#ffde2e;
 	border-radius: 70px 0 70px 0;
 	margin: auto;
 	margin-top: 45px;
@@ -304,6 +310,10 @@ $background-color_3: #F7E8CD;
 		.latestProductButton {
 			margin-top: 25px;
 			text-align: center;
+
+			.primary-btn{
+				@include primaryButton(auto, #17344a, #fdd007);
+			}
 		}
 	}
 }
@@ -369,7 +379,7 @@ $background-color_3: #F7E8CD;
 	}
 }
 .testimonial {
-	background: linear-gradient( to bottom, rgb(250,190,130) 0%, rgb(250,190,130) 90%, transparent 90%, transparent 100% );
+	background: linear-gradient( to bottom, rgb(	255, 222, 46) 0%, rgb(	255, 222, 46) 90%, transparent 90%, transparent 100% );
 	margin-bottom: 100px;
 	.testimonial-marqueee {
 		height: 90px;
