--- a/src/style/UserProfile.scss
+++ b/src/style/UserProfile.scss
@@ -9,7 +9,7 @@
 
     margin: auto;
 
-    margin-bottom: 120px;
+    margin-bottom: 80px;
 
     .userDetails{
         .greetings{
@@ -30,7 +30,12 @@
 
     .userCreds{
         margin: 20px 25px;
-        
+        a{
+            color: blue;
+            font-size: 20px;
+            vertical-align: middle;
+            margin-left: 12px;
+        }
         .credsGrid{
             display: grid;
             grid-template-columns: 40% 60%;
@@ -39,16 +44,21 @@
     }
 
     .userChatSection{
-        display: none;
+        margin-top: 50px;
+        width: 100%;
         height: 100%;
-        /*--------------------
-        Mixins
-        --------------------*/
+
+        .live-chat-message{
+            margin-left: 25px;
+            color: red;
+            margin-bottom: 12px;
+        }
+
         @mixin center {
-        // position: absolute;
-        top: 50%;
-        left: 50%;
-        // transform: translate(-50%, -50%);
+            // position: absolute;
+            top: 50%;
+            left: 50%;
+            // transform: translate(-50%, -50%);
         }
 
         @mixin ball {
@@ -68,12 +78,12 @@
         --------------------*/
         .chat {
         @include center;
-        width: 300px;
+        width: 90%;
         height: 300px;
         max-height: 500px;
         z-index: 2;
         overflow: hidden;
-        background: rgba(0, 0, 0, .5);
+        background: rgba(252,209,7, .5);
         border-radius: 20px;
         display: flex;
         justify-content: space-between;
@@ -270,7 +280,8 @@
             outline: none!important;
             resize: none;
             color: rgba(255, 255, 255);
-            font-size: 11px;
+            font-size: 14px;
+            width: 100%;
             height: 17px;
             margin: 0;
             padding-left: 20px;
@@ -280,26 +291,26 @@
         textarea:focus:-webkit-placeholder{
             color: transparent;
         }
+        textarea::placeholder{
+            color: white;
+        }
         
         & .message-submit {
             position: absolute;
             z-index: 1;
             top: 9px;
-            right: 10px;
-            color: #fff;
+            right: 24px;
+            color: #fcd107;
             border: none;
-            background: #248A52;
-            font-size: 10px;
+            background: black;
+            font-size: 12px;
             text-transform: uppercase;
             line-height: 1;
-            padding: 6px 10px; 
+            padding: 8px 16px; 
             border-radius: 10px;
             outline: none!important;
             transition: background .2s ease;
-            
-            &:hover {
-            background: #1D7745;
-            }
+            cursor: pointer;
         }
         }
 
