--- a/src/style/Home.scss
+++ b/src/style/Home.scss
@@ -1,10 +1,15 @@
-$color_1: white;
-$color_2: #FCD107;
-$color_3: black;
-$font-family_1: 'Bootstrap-icons';
-$background-color_1: black;
-$background-color_2: #A9A9A9;
-$background-color_3: #F7E8CD;
+@import "color";
+
+$imageIds: '1517021897933-0e0319cfbc28', '1533903345306-15d1c30952de', '1545243424-0ce743321e11', '1531306728370-e2ebd9d7bb99';
+
+$bp-md: 600px;
+$bp-lg: 800px;
+:root {
+	--d: 700ms;
+	--e: cubic-bezier(0.19, 1, 0.22, 1);
+	--font-sans: 'Rubik', sans-serif;
+	--font-serif: 'Cardo', serif;
+}
 
 
 @keyframes a-text-scroll {
@@ -25,7 +30,7 @@ $background-color_3: #F7E8CD;
 }
 
 //mixing
-@mixin primaryButton($width:auto, $bg-color:#FCD107, $color:white){
+@mixin primaryButton($width:auto, $bg-color:$color_yellow, $color:white){
 	text-decoration: none;
 	background-color: $bg-color;
 	font-size: 12px;
@@ -37,7 +42,7 @@ $background-color_3: #F7E8CD;
 	text-align: center;
 	width: $width;
 	&:hover {
-		// background-color: #FCD107;
+		// background-color: $color_yellow;
 		// color: black;
 		border-radius: 25px;
 	}
@@ -75,7 +80,7 @@ $background-color_3: #F7E8CD;
 			top: 80%;
 			left: 50%;
 			transform: translate(-50%, -50%);
-			color: $color_1;
+			color: $color_white;
 			text-align: center;
 			.bannerTitle {
 				font-size: 45px;
@@ -87,7 +92,7 @@ $background-color_3: #F7E8CD;
 				font-size: 14px;
 				font-weight: 700;
 				padding: 0;
-				color: $color_2;
+				color: $color_yellow;
 			}
 		}
 		&:hover {
@@ -100,7 +105,7 @@ $background-color_3: #F7E8CD;
 
 // home page login register section
 .home-login{
-	background-color: #ffde2e;
+	background-color: $color_yellow;
 }
 .home-login-register {	
 	max-width: 1200px;
@@ -167,7 +172,7 @@ $background-color_3: #F7E8CD;
 		text-transform: uppercase;
 		font-size: 6.5em;
 		font-weight: 700;
-		color: $color_1;
+		color: $color_white;
 		-webkit-text-stroke: 1px black;
 		flex-shrink: 0;
 		width: max-content;
@@ -194,7 +199,7 @@ $background-color_3: #F7E8CD;
 	width: 100%;
 	margin-right: auto;
 	margin-left: auto;
-	margin-bottom: 100px;
+	margin-bottom: 60px;
 	.title {
 		text-align: center;
 		margin-bottom: 25px;
@@ -216,6 +221,193 @@ $background-color_3: #F7E8CD;
 			height: 100%;
 		}
 	}
+
+	.page-content {
+		display: grid;
+		grid-gap: 1rem;
+		padding: 1rem;
+		max-width: 1200px;
+		margin: 0 auto;
+		font-family: var(--font-sans);
+		
+		@media (min-width: $bp-md) {
+		  grid-template-columns: repeat(2, 1fr);
+		}
+		
+		@media (min-width: $bp-lg) {
+		  grid-template-columns: repeat(4, 1fr);
+		}
+	  }
+	  
+	  
+	  
+	  .partner-scheme-card {  
+		position: relative;
+		display: flex;
+		align-items: flex-end;
+		overflow: hidden;
+		padding: 1rem;
+		width: 100%;
+		text-align: center;
+		cursor: pointer;
+		color: whitesmoke;
+		background-color: whitesmoke;
+		box-shadow: 0 1px 1px rgba(0,0,0,0.1), 
+		  0 2px 2px rgba(0,0,0,0.1), 
+		  0 4px 4px rgba(0,0,0,0.1), 
+		  0 8px 8px rgba(0,0,0,0.1),
+		  0 16px 16px rgba(0,0,0,0.1);
+		
+		@media (min-width: $bp-md) {
+		  height: 350px;
+		}
+		
+		&:before {
+		  content: '';
+		  position: absolute;
+		  top: 0;
+		  left: 0;
+		  width: 100%;
+		  height: 110%;
+		  background-size: cover;
+		  background-position: 0 0;
+		  transition: transform calc(var(--d) * 1.5) var(--e);
+		  pointer-events: none;
+		}
+		
+		&:after {
+		  content: '';
+		  display: block;
+		  position: absolute;
+		  top: 0;
+		  left: 0;
+		  width: 100%;
+		  height: 200%;
+		  pointer-events: none;
+		  background-image: linear-gradient(
+			to bottom,
+			hsla(0, 0%, 0%, 0) 0%,
+			hsla(0, 0%, 0%, 0.009) 11.7%,
+			hsla(0, 0%, 0%, 0.034) 22.1%,
+			hsla(0, 0%, 0%, 0.072) 31.2%,
+			hsla(0, 0%, 0%, 0.123) 39.4%,
+			hsla(0, 0%, 0%, 0.182) 46.6%,
+			hsla(0, 0%, 0%, 0.249) 53.1%,
+			hsla(0, 0%, 0%, 0.320) 58.9%,
+			hsla(0, 0%, 0%, 0.394) 64.3%,
+			hsla(0, 0%, 0%, 0.468) 69.3%,
+			hsla(0, 0%, 0%, 0.540) 74.1%,
+			hsla(0, 0%, 0%, 0.607) 78.8%,
+			hsla(0, 0%, 0%, 0.668) 83.6%,
+			hsla(0, 0%, 0%, 0.721) 88.7%,
+			hsla(0, 0%, 0%, 0.762) 94.1%,
+			hsla(0, 0%, 0%, 0.790) 100%
+		  );
+		  transform: translateY(-50%);
+		  transition: transform calc(var(--d) * 2) var(--e);
+		}
+		
+		@each $id in $imageIds {
+		  $i: index($imageIds, $id);
+		  
+		  &:nth-child(#{$i}):before {
+			background-image: url(https://images.unsplash.com/photo-#{$id}?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
+		  }
+		}
+	  }
+	  
+	  .content {
+		position: relative;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		width: 100%;
+		padding: 1rem;
+		transition: transform var(--d) var(--e);
+		z-index: 1;
+		
+		> * + * {
+		  margin-top: 1rem;
+		}
+	  }
+	  
+	  .partner-scheme-title {
+		font-size: 1.3rem;
+		font-weight: bold;
+		line-height: 1.2;
+	  }
+	  
+	  .copy {
+		font-size: 1.125rem;
+		line-height: 1.35;
+	  }
+	  
+	  .btn {
+		cursor: pointer;
+		margin-top: 1.5rem;
+		padding: 0.75rem 1.5rem;
+		font-size: 0.65rem;
+		font-weight: bold;
+		letter-spacing: 0.025rem;
+		text-transform: uppercase;
+		color: white;
+		background-color: black;
+		border: none;
+		
+		&:hover {
+		  background-color: lighten(black, 5%);
+		}
+		
+		&:focus {
+		  outline: 1px dashed yellow;
+		  outline-offset: 3px;
+		}
+	  }
+	  
+	  @media (hover: hover) and (min-width: $bp-md) {
+		.partner-scheme-card:after {
+		  transform: translateY(0);
+		}
+		
+		.content {
+		  transform: translateY(calc(100% - 4.5rem));
+		  
+		  > *:not(.title) {
+			opacity: 0;
+			transform: translateY(1rem);
+			transition:
+			  transform var(--d) var(--e),
+			  opacity var(--d) var(--e);
+		  }
+		}
+		
+		.partner-scheme-card:hover,
+		.partner-scheme-card:focus-within {
+		  align-items: center;
+	  
+		  &:before { transform: translateY(-4%); }
+		  &:after { transform: translateY(-50%); }
+	  
+		  .content {
+			transform: translateY(0);
+	  
+			> *:not(.title) {
+			  opacity: 1;
+			  transform: translateY(0);
+			  transition-delay: calc(var(--d) / 8);
+			}
+		  }
+		}
+		
+		.partner-scheme-card:focus-within {
+		  &:before,
+		  &:after,
+		  .content,
+		  .content > *:not(.title) {
+			transition-duration: 0s;
+		  }
+		}
+	  }
 }
 
 // latest products
@@ -238,7 +430,7 @@ $background-color_3: #F7E8CD;
 	display: grid;
 	grid-template-columns: 50% 50%;
 	overflow: hidden;
-	background-color: 	#ffde2e;
+	background-color: 	$color_yellow;
 	border-radius: 70px 0 70px 0;
 	margin: auto;
 	margin-top: 45px;
@@ -257,8 +449,8 @@ $background-color_3: #F7E8CD;
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			border: 2px solid $color_2;
-			background-color: $color_2;
+			border: 2px solid $color_yellow;
+			background-color: $color_yellow;
 			border-radius: 50%;
 			cursor: pointer;
 			opacity: .8;
@@ -287,20 +479,20 @@ $background-color_3: #F7E8CD;
 		}
 		@keyframes ripple {
 			0% {
-				box-shadow: 0 0 0 0 rgba($color_2, 0.3),
-				0 0 0 5px rgba($color_2, 0.3),
-				0 0 0 15px rgba($color_2, 0.3),
+				box-shadow: 0 0 0 0 rgba($color_yellow, 0.3),
+				0 0 0 5px rgba($color_yellow, 0.3),
+				0 0 0 15px rgba($color_yellow, 0.3),
 			}
 			100% {
-				box-shadow: 0 0 0 1em rgba($color_2, 0.3),
-				0 0 0 5px rgba($color_2, 0.3),
-				0 0 0 15px rgba($color_2, 0),
+				box-shadow: 0 0 0 1em rgba($color_yellow, 0.3),
+				0 0 0 5px rgba($color_yellow, 0.3),
+				0 0 0 15px rgba($color_yellow, 0),
 			}
 			}
 	}
 
 	.scheme-text {
-		margin: auto auto;
+		margin: auto auto;	
 		.title {
 			margin-bottom: 25px;
 		}
@@ -312,7 +504,7 @@ $background-color_3: #F7E8CD;
 			text-align: center;
 
 			.primary-btn{
-				@include primaryButton(auto, #17344a, #fdd007);
+				@include primaryButton(auto, #17344a, #FFDE2E);
 			}
 		}
 	}
@@ -337,7 +529,7 @@ $background-color_3: #F7E8CD;
 				p {
 					&::after {
 						padding-left: 25px;
-						font-family: $font-family_1;
+						font-family: $font-family-bi;
 						content: '\f138';
 						vertical-align: middle;
 						font-size: 25px;
@@ -361,7 +553,6 @@ $background-color_3: #F7E8CD;
 	}
 	.cate-images {
 		display: grid;
-		transition: all 3s ease;
 		.image {
 			max-height: 500px;
 			height: 100%;
@@ -374,12 +565,11 @@ $background-color_3: #F7E8CD;
 			height: 100%;
 			width: 100%;
 			object-fit: cover;
-			transform: scale(1);
 		}
 	}
 }
 .testimonial {
-	background: linear-gradient( to bottom, rgb(	255, 222, 46) 0%, rgb(	255, 222, 46) 90%, transparent 90%, transparent 100% );
+	background: linear-gradient( to bottom, rgb(	252, 209, 7) 0%, rgb(	252, 209, 7) 90%, transparent 90%, transparent 100% );
 	margin-bottom: 100px;
 	.testimonial-marqueee {
 		height: 90px;
@@ -394,7 +584,7 @@ $background-color_3: #F7E8CD;
 			font-size: 15px;
 			font-weight: 600;
 			letter-spacing: 2px;
-			color: $color_3;
+			color: $color_black;
 			flex-shrink: 0;
 			width: max-content;
 			display: flex;
@@ -406,7 +596,7 @@ $background-color_3: #F7E8CD;
 			height: 3px;
 			width: 30px;
 			border: 1px solid black;
-			background-color: $background-color_1;
+			background-color: black;
 			display: inline-block;
 			margin: 0 60px;
 		}
