--- a/src/style/Primary.scss
+++ b/src/style/Primary.scss
@@ -1,18 +1,4 @@
-$color_1: black;
-$color_2: white;
-$color_3: #FCD107;
-$color_4: #8F9992;
-$color_5: blue;
-$color_6:whitesmoke;
-$font-family_1: 'DM Sans', sans-serif;
-$background-color_1: #18171D;
-$background-color_2: white;
-$background-color_3: red;
-$background-color_4: #F6EBD5;
-$background-color_5: inherit;
-$background-color_6: black;
-$background-color_7: #A9A9A9;
-$border-color_1: black;
+@import "_color";
 
 @import "https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900;9..40,1000&display=swap";
 
@@ -20,12 +6,12 @@ $border-color_1: black;
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: $font-family_1;
+	font-family: $font-family_primary;
 	scroll-behavior: smooth;
 }
 *::selection {
 	color: white;
-	background: $color_3;
+	background: $color_yellow_2;
 }
 .centerContainer {
 	max-width: 1200px;
@@ -62,26 +48,43 @@ a {
 }
 
 //swiper js custom style
+.swiper{
+	&:hover .swiper-button-prev{
+		left:  var(--swiper-navigation-sides-offset, 10px);
+		opacity: 1;
+	}
+	&:hover .swiper-button-next{
+		opacity: 1;
+		right:  var(--swiper-navigation-sides-offset, 10px);
+	}
+}
+
 .swiper-button-prev{
-	color: black;
+	color: $color_black_2;
     border-radius: 50%;
     padding: 25px;
-    background: $color_3;
-
+    background: $color_yellow_2;
+	opacity: 0;
+	left:  var(--swiper-navigation-sides-offset, -10px);
+	transition: all .3s ease;
 	&::after{
 		font-size: 24px;
 	}
 }
 .swiper-button-next{
-	color: black;
+	color: $color_black_2;
     border-radius: 50%;
     padding: 25px;
-    background: $color_3;
-
+    background: $color_yellow_2;
+	opacity: 0;
+	right:  var(--swiper-navigation-sides-offset, -10px);
+	transition: all .3s ease;
 	&::after{
 		font-size: 24px;
 	}
 }
+
+
 
 .card {
 	width: 100%;
@@ -128,7 +131,7 @@ a {
 	width: 100%;
 	transition: all .5s ease;
 	a {
-		color: $color_1;
+		color: $color_black;
 	}
 	.icons {
 		position: relative;
@@ -139,8 +142,6 @@ a {
 			font-weight: 300;
 			position: absolute;
 			bottom: 40px;
-			background-color: $background-color_1;
-			color: $color_2;
 			padding: 1px 8px;
 			opacity: 0;
 		}
@@ -151,13 +152,13 @@ a {
 		padding: 8px 12px;
 		margin: 8px;
 		border: 1px solid white;
-		background-color: $background-color_2;
+		background-color: $background-color_white;
 		border-radius: 50%;
 		transition: all .3s ease;
 		&:hover {
-			border: 1px solid red;
-			background-color: $background-color_3;
-			color: $color_2;
+			border: 1px solid $color_yellow;
+			background-color: $color_background_yellow;
+			color: $color_black_2;
 			.showOnHover {
 				opacity: 1;
 			}
@@ -213,7 +214,7 @@ a {
 	.rating {
 		margin-bottom: 15px;
 		.star {
-			color: $color_3;
+			color: $color_black_2;
 			padding: 0 3px;
 		}
 	}
@@ -254,7 +255,7 @@ a {
 
 .enquire-box {
 	margin-bottom: 130px;
-	background-color: #FFDE2E;
+	background-color: $color_yellow;
 	display: grid;
 	grid-template-columns: 45% 50%;
 	gap: 3%;
@@ -262,6 +263,7 @@ a {
 	overflow: hidden;
 	.title {
 		margin-bottom: 40px;
+		color:$color_black_2;
 	}
 	.enquire-img {
 		img {
@@ -275,10 +277,10 @@ a {
 			border-bottom: 1px solid black !important;
 		}
 		label{
-			color: black !important;
+			color: $color_black_2 !important;
 		}
 		textarea::placeholder{
-			color: black !important;
+			color: $color_black_2  !important;
 		}
 
 	}
@@ -309,7 +311,7 @@ a {
 			width: 80%;
 			padding: 10px 18px;
 			font-size: 16px;
-			color: $color_1;
+			color: $color_black;
 			margin-bottom: 30px;
 			border: none;
 			border-bottom: 1px solid #8F9992;
@@ -320,24 +322,24 @@ a {
 					label {
 						top: -8px;
 						left: 16px;
-						color: $color_1;
+						color: $color_black;
 						font-size: 12px;
-						background-color: $background-color_5;
+						background-color: inherit;
 					}
 				}
-				border-color: $border-color_1;
+				border-color: $color_black;
 			}
 			&:valid {
 				~ {
 					label {
 						top: -8px;
 						left: 16px;
-						color: $color_1;
+						color: $color_black;
 						font-size: 12px;
-						background-color: $background-color_5;
+						background-color: inherit;
 					}
 				}
-				border-color: $border-color_1;
+				border-color: $color_black;
 			}
 		}
 		label {
@@ -346,7 +348,7 @@ a {
 			padding: 0 5px;
 			left: 16px;
 			font-size: 15px;
-			color: $color_4;
+			color: $color_form-border;
 			pointer-events: none;
 			transition: .5s;
 		}
@@ -354,17 +356,17 @@ a {
 			width: 80%;
 			padding: 10px 18px;
 			font-size: 18px;
-			color: $color_1;
+			color: $color_black;
 			margin-bottom: 30px;
 			border: none;
 			border-bottom: 1px solid #8F9992;
 			outline: none;
 			background: transparent;
 			&:focus {
-				border-color: $border-color_1;
+				border-color: $color_black;
 			}
 			&:valid {
-				border-color: $border-color_1;
+				border-color: $color_black;
 			}
 		}
 		select{
@@ -404,7 +406,7 @@ a {
 		margin-top: 0;
 		margin-bottom: 15px;
 		a {
-			color: $color_5;
+			color: $color_blue;
 			&:hover {
 				text-decoration: underline;
 			}
