--- a/src/style/UserProfile.scss
+++ b/src/style/UserProfile.scss
@@ -1,3 +1,5 @@
+@import "color";
+
 .userProfile{
     max-width: 1200px;
     width: 100%;
@@ -24,14 +26,12 @@
                 width: 70%;
             }
         }
-
-
     }
 
     .userCreds{
         margin: 20px 25px;
         a{
-            color: blue;
+            color: $color_blue;
             font-size: 20px;
             vertical-align: middle;
             margin-left: 12px;
@@ -50,7 +50,7 @@
 
         .live-chat-message{
             margin-left: 25px;
-            color: red;
+            color: $color_red;
             margin-bottom: 12px;
         }
 
@@ -300,7 +300,7 @@
             z-index: 1;
             top: 9px;
             right: 24px;
-            color: #fcd107;
+            color: $color_yellow_2;
             border: none;
             background: black;
             font-size: 12px;
