--- a/src/style/Home.scss
+++ b/src/style/Home.scss
@@ -1,34 +1,5 @@
 @import "color";
 
-$imageIds: '1517021897933-0e0319cfbc28', '1533903345306-15d1c30952de', '1545243424-0ce743321e11', '1531306728370-e2ebd9d7bb99';
-
-$bp-md: 600px;
-$bp-lg: 800px;
-:root {
-	--d: 700ms;
-	--e: cubic-bezier(0.19, 1, 0.22, 1);
-	--font-sans: 'Rubik', sans-serif;
-	--font-serif: 'Cardo', serif;
-}
-
-
-@keyframes a-text-scroll {
-	0% {
-		transform: translate3d(0, 0, 0);
-	}
-	100% {
-		transform: translate3d(-100%, 0, 0);
-	}
-}
-@keyframes a-text-scroll-reverse {
-	0% {
-		transform: translate3d(-100%, 0, 0);
-	}
-	100% {
-		transform: translate3d(0, 0, 0);
-	}
-}
-
 //mixing
 @mixin primaryButton($width:auto, $bg-color:$color_yellow, $color:white){
 	text-decoration: none;
@@ -60,7 +31,7 @@ $bp-lg: 800px;
 	display: grid;
 	grid-template-columns: 50% 50%;
 	height: auto;
-	// margin-bottom: 40px;
+	// margin-bottom: 10px;
 	.banner {
 		width: 100%;
 		position: relative;
@@ -106,6 +77,7 @@ $bp-lg: 800px;
 // home page login register section
 .home-login{
 	background-color: $color_yellow;
+	margin-bottom: 100px;
 }
 .home-login-register {	
 	max-width: 1200px;
@@ -155,6 +127,7 @@ $bp-lg: 800px;
 	align-items: center;
 	gap: 70px;
 	padding: 25px 0 50px 0;
+	margin-bottom: 60px;
 	.primary-btn {
 		@include primaryButton(200px);
 	}
@@ -195,11 +168,16 @@ $bp-lg: 800px;
 
 // our usp
 .OurUSP {
-	max-width: 1200px;
 	width: 100%;
-	margin-right: auto;
-	margin-left: auto;
-	margin-bottom: 60px;
+	border-top: 4px solid $color_yellow;
+	border-bottom: 4px solid $color_yellow;
+	padding: 25px 0;
+	margin-bottom: 80px;
+	.uspCards{
+		max-width: 1200px;
+		width: 100%;
+		margin: auto;
+	}
 	.title {
 		text-align: center;
 		margin-bottom: 25px;
@@ -212,202 +190,65 @@ $bp-lg: 800px;
 		text-align: center;
 		margin-bottom: 35px;
 	}
-	.partnerSchemeCard{
-		max-height: 400px;
-		object-fit: cover;
+	.partner-scheme-cards{
+		max-width: 1200px;
+		width: 100%;
+		margin: auto;
+		display: flex;
+		justify-content: space-between;
 		overflow: hidden;
-		img{
+
+		.scheme-card{
+			max-width: 270px;
 			width: 100%;
-			height: 100%;
+			position: relative;
+			background-color: black;
+
+			img{
+				width: 100%;
+				min-height: 380px;
+				height: 100%;
+				object-fit: cover;
+				opacity: .5;
+				transition: opacity .5s ease;
+			}
+
+			.card-content{
+				position: absolute;
+				top: 80%;
+				left: 8%;
+				transition: all .5s ease;
+
+				.card-title{
+					color: white;
+					font-size: 34px;
+					font-weight: 600;
+				}
+
+				.card-p{
+					color: $color_yellow;
+					border-left: 2px solid #FFDE2E;
+					margin-left: 15px;
+					padding-top:12px ;
+					padding-left: 12px;
+					opacity: 0;
+					transition: opacity .3s ease-in-out;
+				}
+			}
+
+			&:hover .card-content{
+				top: 30%;
+			}
+			&:hover img{
+				opacity: .2;
+			}
+			&:hover .card-p{
+				opacity: 1;
+			}
 		}
 	}
 
-	.page-content {
-		display: grid;
-		grid-gap: 1rem;
-		padding: 1rem;
-		max-width: 1200px;
-		margin: 0 auto;
-		font-family: var(--font-sans);
-		
-		@media (min-width: $bp-md) {
-		  grid-template-columns: repeat(2, 1fr);
-		}
-		
-		@media (min-width: $bp-lg) {
-		  grid-template-columns: repeat(4, 1fr);
-		}
-	  }
-	  
-	  
-	  
-	  .partner-scheme-card {  
-		position: relative;
-		display: flex;
-		align-items: flex-end;
-		overflow: hidden;
-		padding: 1rem;
-		width: 100%;
-		text-align: center;
-		cursor: pointer;
-		color: whitesmoke;
-		background-color: whitesmoke;
-		box-shadow: 0 1px 1px rgba(0,0,0,0.1), 
-		  0 2px 2px rgba(0,0,0,0.1), 
-		  0 4px 4px rgba(0,0,0,0.1), 
-		  0 8px 8px rgba(0,0,0,0.1),
-		  0 16px 16px rgba(0,0,0,0.1);
-		
-		@media (min-width: $bp-md) {
-		  height: 350px;
-		}
-		
-		&:before {
-		  content: '';
-		  position: absolute;
-		  top: 0;
-		  left: 0;
-		  width: 100%;
-		  height: 110%;
-		  background-size: cover;
-		  background-position: 0 0;
-		  transition: transform calc(var(--d) * 1.5) var(--e);
-		  pointer-events: none;
-		}
-		
-		&:after {
-		  content: '';
-		  display: block;
-		  position: absolute;
-		  top: 0;
-		  left: 0;
-		  width: 100%;
-		  height: 200%;
-		  pointer-events: none;
-		  background-image: linear-gradient(
-			to bottom,
-			hsla(0, 0%, 0%, 0) 0%,
-			hsla(0, 0%, 0%, 0.009) 11.7%,
-			hsla(0, 0%, 0%, 0.034) 22.1%,
-			hsla(0, 0%, 0%, 0.072) 31.2%,
-			hsla(0, 0%, 0%, 0.123) 39.4%,
-			hsla(0, 0%, 0%, 0.182) 46.6%,
-			hsla(0, 0%, 0%, 0.249) 53.1%,
-			hsla(0, 0%, 0%, 0.320) 58.9%,
-			hsla(0, 0%, 0%, 0.394) 64.3%,
-			hsla(0, 0%, 0%, 0.468) 69.3%,
-			hsla(0, 0%, 0%, 0.540) 74.1%,
-			hsla(0, 0%, 0%, 0.607) 78.8%,
-			hsla(0, 0%, 0%, 0.668) 83.6%,
-			hsla(0, 0%, 0%, 0.721) 88.7%,
-			hsla(0, 0%, 0%, 0.762) 94.1%,
-			hsla(0, 0%, 0%, 0.790) 100%
-		  );
-		  transform: translateY(-50%);
-		  transition: transform calc(var(--d) * 2) var(--e);
-		}
-		
-		@each $id in $imageIds {
-		  $i: index($imageIds, $id);
-		  
-		  &:nth-child(#{$i}):before {
-			background-image: url(https://images.unsplash.com/photo-#{$id}?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
-		  }
-		}
-	  }
-	  
-	  .content {
-		position: relative;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		width: 100%;
-		padding: 1rem;
-		transition: transform var(--d) var(--e);
-		z-index: 1;
-		
-		> * + * {
-		  margin-top: 1rem;
-		}
-	  }
-	  
-	  .partner-scheme-title {
-		font-size: 1.3rem;
-		font-weight: bold;
-		line-height: 1.2;
-	  }
-	  
-	  .copy {
-		font-size: 1.125rem;
-		line-height: 1.35;
-	  }
-	  
-	  .btn {
-		cursor: pointer;
-		margin-top: 1.5rem;
-		padding: 0.75rem 1.5rem;
-		font-size: 0.65rem;
-		font-weight: bold;
-		letter-spacing: 0.025rem;
-		text-transform: uppercase;
-		color: white;
-		background-color: black;
-		border: none;
-		
-		&:hover {
-		  background-color: lighten(black, 5%);
-		}
-		
-		&:focus {
-		  outline: 1px dashed yellow;
-		  outline-offset: 3px;
-		}
-	  }
-	  
-	  @media (hover: hover) and (min-width: $bp-md) {
-		.partner-scheme-card:after {
-		  transform: translateY(0);
-		}
-		
-		.content {
-		  transform: translateY(calc(100% - 4.5rem));
-		  
-		  > *:not(.title) {
-			opacity: 0;
-			transform: translateY(1rem);
-			transition:
-			  transform var(--d) var(--e),
-			  opacity var(--d) var(--e);
-		  }
-		}
-		
-		.partner-scheme-card:hover,
-		.partner-scheme-card:focus-within {
-		  align-items: center;
-	  
-		  &:before { transform: translateY(-4%); }
-		  &:after { transform: translateY(-50%); }
-	  
-		  .content {
-			transform: translateY(0);
-	  
-			> *:not(.title) {
-			  opacity: 1;
-			  transform: translateY(0);
-			  transition-delay: calc(var(--d) / 8);
-			}
-		  }
-		}
-		
-		.partner-scheme-card:focus-within {
-		  &:before,
-		  &:after,
-		  .content,
-		  .content > *:not(.title) {
-			transition-duration: 0s;
-		  }
-		}
-	  }
+
 }
 
 // latest products
