--- a/src/style/Home.scss
+++ b/src/style/Home.scss
@@ -1,5 +1,23 @@
 @import "color";
 
+
+@keyframes a-text-scroll {
+	0% {
+		transform: translate3d(0, 0, 0);
+	}
+	100% {
+		transform: translate3d(-100%, 0, 0);
+	}
+}
+@keyframes a-text-scroll-reverse {
+	0% {
+		transform: translate3d(-100%, 0, 0);
+	}
+	100% {
+		transform: translate3d(0, 0, 0);
+	}
+}
+
 //mixing
 @mixin primaryButton($width:auto, $bg-color:$color_yellow, $color:white){
 	text-decoration: none;
@@ -184,6 +202,23 @@
 	}
 }
 
+.partnerSchemeSlider{
+	margin-bottom: 100px;
+	.title{
+		text-align: center;
+		margin-bottom: 35px;
+	}
+	.partnerSchemeCard{
+		max-height: 400px;
+		object-fit: cover;
+		overflow: hidden;
+		img{
+			width: 100%;
+			height: 100%;
+		}
+	}
+}
+
 .partnerScheme{
 	margin-bottom: 100px;
 	.title{
@@ -215,7 +250,7 @@
 
 			.card-content{
 				position: absolute;
-				top: 80%;
+				top: 75%;
 				left: 8%;
 				transition: all .5s ease;
 
@@ -247,8 +282,6 @@
 			}
 		}
 	}
-
-
 }
 
 // latest products
@@ -264,7 +297,6 @@
 		margin: 40px 0;
 	}
 }
-
 
 .scheme {
 	max-width: 1440px;
