--- a/src/style/PartnerUs.scss
+++ b/src/style/PartnerUs.scss
@@ -38,12 +38,9 @@
     }
 }
 .partnerUs{
-    max-width: 1200px;
-    width: 100%;
-    margin: auto;
     margin-bottom: 50px;
     .our-partner-program{
-        margin-bottom: 40px;
+        margin: 80px auto;
         .heading {
             font-size: 32px;
             line-height: 35px;
@@ -58,24 +55,88 @@
             font-size: 400;
         }
     }
-
-    .experience-banner {
-        padding: 45px 0;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        .box {
-            text-align: center;
-            .count {
-                color: $color_yellow_2;
-                font-size: 70px;
-                span {
-                    font-size: 50px;
-                    vertical-align: top;
-                }
+    
+    .our-partner-menu{
+        position: sticky;
+        top: 100px;
+        z-index: 25;
+        background-color: white;
+        .nav-center{
+            //  
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            padding: 25px 12px;
+            margin-bottom: 50px;
+            
+            a{
+                color: $color_black_2;
             }
-            .field {
-                font-size: 16px;
+        }
+    }
+
+    .partner-types{
+        margin-bottom: 100px;
+        .title{
+            text-align: center;
+            margin-bottom: 35px;
+        }
+        .partner-type-cards{
+            max-width: 1200px;
+            width: 100%;
+            margin: auto;
+            display: flex;
+            justify-content: space-between;
+            gap: 10px;
+            overflow: hidden;
+    
+            .type-card{
+                max-width: 370px;
+                height: 400px;
+                width: 100%;
+                position: relative;
+                background-color: black;
+    
+                img{
+                    width: 100%;
+                    min-height: 380px;
+                    height: 100%;
+                    object-fit: cover;
+                    opacity: .5;
+                    transition: opacity .5s ease;
+                }
+    
+                .card-content{
+                    position: absolute;
+                    top: 75%;
+                    left: 8%;
+                    transition: all .5s ease;
+    
+                    .card-title{
+                        color: white;
+                        font-size: 34px;
+                        font-weight: 600;
+                    }
+    
+                    .card-p{
+                        color: $color_yellow;
+                        border-left: 2px solid #FFDE2E;
+                        margin: 0 15px;
+                        padding: 12px 35px 0 15px;
+                        opacity: 0;
+                        transition: opacity .3s ease-in-out;
+                    }
+                }
+    
+                &:hover .card-content{
+                    top: 30%;
+                }
+                &:hover img{
+                    opacity: .2;
+                }
+                &:hover .card-p{
+                    opacity: 1;
+                }
             }
         }
     }
@@ -85,6 +146,7 @@
         display: flex;
         flex-direction: row-reverse;
         justify-content: space-between;
+        margin-bottom: 60px;
         .image {
             background-image: url('../assets/images/partnerUs.jpg');
             background-size: cover;
@@ -96,6 +158,14 @@
             width: 54%;
             display: flex;
             flex-direction:column ;
+            .heading{
+                font-size: 32px;
+                line-height: 35px;
+                letter-spacing: .7px;
+                font-weight: 700;
+                border: none;
+                margin: 40px 0 20px;
+            }
             ul{
                 margin-top: 12px;
                 margin-left: 25px;
